compiler/src/snapshots/compiler__grammar_test__snapshot_success@loops.tapir.snap
---
source: compiler/src/grammar_test.rs
expression: ast
input_file: compiler/src/snapshot_tests/grammar/loops.tapir
---
Script(
  struct_declarations: [],
  property_declarations: [],
  globals: [],
  functions: [
    Function(
      receiver_type: None,
      name: "@toplevel",
      span: "[span]",
      statements: [
        Statement(
          span: "[span]",
          kind: VariableDeclaration(
            idents: [
              TypedIdent(
                ident: Ident(
                  span: "[span]",
                  ident: "i",
                ),
                ty: None,
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: Integer(0),
                meta: {},
              ),
            ],
          ),
          meta: {},
        ),
        Statement(
          span: "[span]",
          kind: Loop(
            block: [
              Statement(
                span: "[span]",
                kind: VariableDeclaration(
                  idents: [
                    TypedIdent(
                      ident: Ident(
                        span: "[span]",
                        ident: "x",
                      ),
                      ty: None,
                    ),
                  ],
                  values: [
                    Expression(
                      span: "[span]",
                      kind: Integer(3),
                      meta: {},
                    ),
                  ],
                ),
                meta: {},
              ),
              Statement(
                span: "[span]",
                kind: If(
                  condition: Expression(
                    span: "[span]",
                    kind: BinaryOperation(
                      lhs: Expression(
                        span: "[span]",
                        kind: Variable("i"),
                        meta: {},
                      ),
                      operator: Gt,
                      rhs: Expression(
                        span: "[span]",
                        kind: Integer(4),
                        meta: {},
                      ),
                    ),
                    meta: {},
                  ),
                  true_block: [
                    Statement(
                      span: "[span]",
                      kind: Break,
                      meta: {},
                    ),
                  ],
                  false_block: [],
                ),
                meta: {},
              ),
              Statement(
                span: "[span]",
                kind: Assignment(
                  targets: [
                    [
                      Ident(
                        span: "[span]",
                        ident: "i",
                      ),
                    ],
                  ],
                  values: [
                    Expression(
                      span: "[span]",
                      kind: BinaryOperation(
                        lhs: Expression(
                          span: "[span]",
                          kind: Variable("i"),
                          meta: {},
                        ),
                        operator: Add,
                        rhs: Expression(
                          span: "[span]",
                          kind: Integer(1),
                          meta: {},
                        ),
                      ),
                      meta: {},
                    ),
                  ],
                ),
                meta: {},
              ),
              Statement(
                span: "[span]",
                kind: Continue,
                meta: {},
              ),
            ],
          ),
          meta: {},
        ),
      ],
      arguments: [],
      return_types: FunctionReturn(
        types: [],
        span: "[span]",
      ),
      modifiers: FunctionModifiers(
        is_event_handler: None,
      ),
      meta: {},
    ),
  ],
  extern_functions: [],
  builtin_functions: [],
)
