compiler/src/snapshots/compiler__grammar_test__snapshot_success@method_call_on_variable.tapir.snap
---
source: compiler/src/grammar_test.rs
expression: ast
input_file: compiler/src/snapshot_tests/grammar/method_call_on_variable.tapir
---
Script(
  struct_declarations: [],
  property_declarations: [
    PropertyDeclaration(
      name: TypedIdent(
        ident: Ident(
          span: "[span]",
          ident: "int_prop",
        ),
        ty: Some(TypeWithLocation(
          t: Some(Int),
          name: "int",
          span: "[span]",
        )),
      ),
      span: "[span]",
    ),
  ],
  globals: [
    GlobalDeclaration(
      name: TypedIdent(
        ident: Ident(
          span: "[span]",
          ident: "t",
        ),
        ty: Some(TypeWithLocation(
          t: Some(Task),
          name: "task",
          span: "[span]",
        )),
      ),
      value: None,
      span: "[span]",
    ),
  ],
  functions: [
    Function(
      kind: Regular,
      name: "@toplevel",
      span: "[span]",
      statements: [
        Statement(
          span: "[span]",
          kind: Assignment(
            targets: [
              Expression(
                span: "[span]",
                kind: Variable("t"),
                meta: {},
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: Spawn(
                  call: Expression(
                    span: "[span]",
                    kind: Call(
                      name: "worker",
                      arguments: [],
                    ),
                    meta: {},
                  ),
                ),
                meta: {},
              ),
            ],
          ),
          meta: {},
        ),
        Statement(
          span: "[span]",
          kind: Wait(
            frames: None,
          ),
          meta: {},
        ),
        Statement(
          span: "[span]",
          kind: Expression(
            expression: Expression(
              span: "[span]",
              kind: MethodCall(
                receiver: Expression(
                  span: "[span]",
                  kind: Variable("t"),
                  meta: {},
                ),
                method: Ident(
                  span: "[span]",
                  ident: "cancel",
                ),
                arguments: [],
              ),
              meta: {},
            ),
          ),
          meta: {},
        ),
        Statement(
          span: "[span]",
          kind: Wait(
            frames: None,
          ),
          meta: {},
        ),
        Statement(
          span: "[span]",
          kind: Assignment(
            targets: [
              Expression(
                span: "[span]",
                kind: Variable("int_prop"),
                meta: {},
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: Integer(999),
                meta: {},
              ),
            ],
          ),
          meta: {},
        ),
      ],
      arguments: [],
      return_types: FunctionReturn(
        types: [],
        span: "[span]",
      ),
      modifiers: FunctionModifiers(
        is_event_handler: None,
      ),
      meta: {},
    ),
    Function(
      kind: Regular,
      name: "worker",
      span: "[span]",
      statements: [
        Statement(
          span: "[span]",
          kind: Assignment(
            targets: [
              Expression(
                span: "[span]",
                kind: Variable("int_prop"),
                meta: {},
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: Integer(100),
                meta: {},
              ),
            ],
          ),
          meta: {},
        ),
        Statement(
          span: "[span]",
          kind: Wait(
            frames: None,
          ),
          meta: {},
        ),
        Statement(
          span: "[span]",
          kind: Assignment(
            targets: [
              Expression(
                span: "[span]",
                kind: Variable("int_prop"),
                meta: {},
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: Integer(200),
                meta: {},
              ),
            ],
          ),
          meta: {},
        ),
      ],
      arguments: [],
      return_types: FunctionReturn(
        types: [],
        span: "[span]",
      ),
      modifiers: FunctionModifiers(
        is_event_handler: None,
      ),
      meta: {},
    ),
  ],
  extern_functions: [],
  builtin_functions: [],
)
